--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
         }
 
         /* Card Colors */
+        .card-competition .icon {
+            color: #FFD700;
+        }
+
         .card-quiz .icon {
             color: #FF6B6B;
         }
@@ -306,6 +310,15 @@
         <p>اختر التحدي الذي يناسبك!</p>
 
         <div class="card-container">
+
+            <a href="competition.html" class="game-card card-competition">
+                <div class="icon">🏆</div>
+                <div class="text-content">
+                    <h2>المسابقة الكبرى</h2>
+                    <span>3 مراحل، تحدي واحد!</span>
+                </div>
+                <div class="arrow">❮</div>
+            </a>
 
             <a href="quiz.html" class="game-card card-quiz">
                 <div class="icon">🧠</div>
